# wsr

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  PKGBUILD  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
src/: input_manager.py  main.py  report_generator.py  screenshot_engine.py
src/wsr/: config.py  i18n.py  input_manager.py  key_buffer.py  main.py  monitor_manager.py  report_generator.py  screenshot_engine.py  screenshot_worker.py  waybar_module.py
src/wsr/locales/: de.json  en.json
tests/: test_cli.py  test_config.py  test_i18n.py  test_input.py  test_key_buffer.py  test_monitor.py  test_report.py  test_screenshot.py  test_screenshot_worker.py
